8355319: Update Manpage for Compact Object Headers (Production)
Reviewed-by: coleenp
Backport-of: 75ce44aa84ebf0f48dd73b98f2bf2d6077473ed1